<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mapa" />

        <Button
            android:id="@+id/pocasie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pocasie" />

        <Button
            android:id="@+id/SoS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SoS" />

        <Button
            android:id="@+id/Nahraj_Obrazok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nahratie_obrazkov" />

        <Button
            android:id="@+id/ZaznamenajZazitok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zaznamenanie_zazitkov" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>